--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Devroots-Site/BeDevroots#readme",
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "nodemon": "^3.1.9",
     "prisma": "^6.1.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
