--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "prisma": "^6.1.0",
+    "swagger-cli": "^4.0.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.2",
