--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "target": "ESNext",
       "strict": true,
       "esModuleInterop": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "resolveJsonModule": true,
   }
 }
