--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format:fix": "prettier --write \"src/**/*.{ts,js,json,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/Devroots-Site/BeDevroots#readme",
   "devDependencies": {
-    "@eslint/js": "^9.25.1",
+    "@eslint/js": "^9.26.0",
     "@eslint/json": "^0.12.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -36,7 +36,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
@@ -44,18 +44,18 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
-    "prisma": "^6.1.0",
+    "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "swagger-ui-express": "^5.0.1"
   }
 }
