--- a/package.json
+++ b/package.json
@@ -27,35 +27,35 @@
   },
   "homepage": "https://github.com/Devroots-Site/BeDevroots#readme",
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@eslint/json": "^0.12.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.15.3",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
-    "prisma": "^6.7.0",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.1"
+    "@eslint/js": "9.26.0",
+    "@eslint/json": "0.12.0",
+    "@types/cors": "2.8.17",
+    "@types/express": "5.0.1",
+    "@types/morgan": "1.9.9",
+    "@types/node": "22.15.3",
+    "@types/swagger-ui-express": "4.1.8",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "eslint": "9.26.0",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.6",
+    "globals": "16.0.0",
+    "morgan": "1.10.0",
+    "nodemon": "3.1.10",
+    "prettier": "3.5.3",
+    "prisma": "6.7.0",
+    "ts-node": "10.9.2",
+    "ts-node-dev": "2.0.0",
+    "tsx": "4.19.4",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.31.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.7.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "swagger-ui-express": "^5.0.1"
+    "@prisma/client": "6.7.0",
+    "cors": "2.8.5",
+    "dotenv": "16.5.0",
+    "express": "5.1.0",
+    "swagger-ui-express": "5.0.1"
   }
 }
