--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "ts-node-dev": "2.0.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.31.1"
+    "typescript-eslint": "8.31.1",
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "@prisma/client": "6.7.0",
