--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:coverage:check": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80",
     "test:coverage:check:html": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80 --reporter=html",
     "start": "node server.js",
-    "dev": "nodemon",
+    "dev": "npm run infisical:generate && nodemon",
+    "infisical:generate": "echo 'Generating .env from Infisical...' infisical pull --env=dev --path=.env",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
@@ -35,8 +36,10 @@
   "devDependencies": {
     "@eslint/js": "9.26.0",
     "@eslint/json": "0.12.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "2.8.17",
-    "@types/express": "5.0.1",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.15.3",
     "@types/swagger-ui-express": "4.1.8",
@@ -62,10 +65,12 @@
   },
   "dependencies": {
     "@prisma/client": "6.7.0",
+    "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "husky-init": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "5.0.1"
   }
 }
