--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "test:coverage:check:html": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80 --reporter=html",
     "start": "node server.js",
     "dev": "npm run infisical:generate && nodemon",
-    "infisical:generate": "echo 'Generating .env from Infisical...' infisical pull --env=dev --path=.env",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate dev --name init",
-    "prisma:push": "npx prisma db push",
-    "seed": "ts-node src/seeding/index.ts",
+    "infisical:generate": "echo 'Generating .env from Infisical...' infisical pull --env=dev --path=.env --force",
+    "prisma:generate": "npm run infisical:generate && npx prisma generate",
+    "prisma:migrate": "npm run infisical:generate && npx prisma migrate dev --name init",
+    "prisma:push": "npm run infisical:generate && npx prisma db push",
+    "seed": "npm run infisical:generate && ts-node src/seeding/index.ts",
     "prepare": "husky install"
   },
   "repository": {
@@ -71,6 +71,7 @@
     "express": "5.1.0",
     "husky-init": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "openapi-types": "^12.1.3",
     "swagger-ui-express": "5.0.1"
   }
 }
