--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@eslint/js": "9.26.0",
     "@eslint/json": "0.12.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.15.3",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "4.1.8",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
@@ -56,6 +58,7 @@
     "nodemon": "3.1.10",
     "prettier": "3.5.3",
     "prisma": "6.7.0",
+    "supertest": "^7.1.0",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "tsx": "4.19.4",
@@ -66,12 +69,14 @@
   "dependencies": {
     "@prisma/client": "6.7.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "husky-init": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "openapi-types": "^12.1.3",
+    "openapi3-ts": "^4.4.0",
     "swagger-ui-express": "5.0.1"
   }
 }
