--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "supertest": "^7.1.0",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
