--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,14 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15
-    container_name: devroots-postgres
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: 111%k!HRgmu@4T
-      POSTGRES_DB: mydatabase
+  backend:
+    container_name: devroots-backend
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "4005:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - "3001:3001"
     restart: unless-stopped
-
-volumes:
-  postgres_data:
+    environment:
+      NODE_ENV: production
+      DATABASE_URL: postgres://admin:geheim@db-host:5432/devroots
