--- a/package.json
+++ b/package.json
@@ -1,83 +1,84 @@
 {
-  "name": "bedevroots",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "format:check": "prettier --check \"src/**/*.{ts,js,json,md}\"",
-    "format:fix": "prettier --write \"src/**/*.{ts,js,json,md}\"",
-    "test": "vitest --run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:coverage:report": "vitest run --coverage --reporter=html",
-    "test:coverage:check": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80",
-    "test:coverage:check:html": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80 --reporter=html",
-    "start": "node server.js",
-    "dev": "npm run infisical:generate && nodemon",
-    "infisical:generate": "echo 'Generating .env from Infisical...' infisical pull --env=dev --path=.env --force",
-    "prisma:generate": "npm run infisical:generate && npx prisma generate",
-    "prisma:migrate": "npm run infisical:generate && npx prisma migrate dev --name init",
-    "prisma:push": "npm run infisical:generate && npx prisma db push",
-    "seed": "npm run infisical:generate && ts-node src/seeding/index.ts",
-    "prepare": "husky install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Devroots-Site/BeDevroots.git"
-  },
-  "author": "Bichler Bastian",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Devroots-Site/BeDevroots/issues"
-  },
-  "homepage": "https://github.com/Devroots-Site/BeDevroots#readme",
-  "devDependencies": {
-    "@eslint/js": "9.26.0",
-    "@eslint/json": "0.12.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/morgan": "1.9.9",
-    "@types/node": "22.15.3",
-    "@types/supertest": "^6.0.3",
-    "@types/swagger-ui-express": "4.1.8",
-    "@typescript-eslint/eslint-plugin": "8.31.1",
-    "@typescript-eslint/parser": "8.31.1",
-    "eslint": "9.26.0",
-    "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prettier": "5.2.6",
-    "globals": "16.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.5.1",
-    "morgan": "1.10.0",
-    "nodemon": "3.1.10",
-    "prettier": "3.5.3",
-    "prisma": "6.7.0",
-    "supertest": "^7.1.0",
-    "ts-node": "10.9.2",
-    "ts-node-dev": "2.0.0",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "4.19.4",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.31.1",
-    "vitest": "^3.1.2"
-  },
-  "dependencies": {
-    "@prisma/client": "6.7.0",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "2.8.5",
-    "dotenv": "16.5.0",
-    "express": "5.1.0",
-    "husky-init": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "openapi-types": "^12.1.3",
-    "openapi3-ts": "^4.4.0",
-    "swagger-ui-express": "5.0.1"
-  }
+    "name": "bedevroots",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc",
+        "lint": "eslint . --ext .ts",
+        "lint:fix": "eslint . --ext .ts --fix",
+        "format:check": "prettier --check \"src/**/*.{ts,js,json,md}\"",
+        "format:fix": "prettier --write \"src/**/*.{ts,js,json,md}\"",
+        "test": "vitest --run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
+        "test:coverage:report": "vitest run --coverage --reporter=html",
+        "test:coverage:check": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80",
+        "test:coverage:check:html": "vitest run --coverage --reporter=html && vitest-coverage-checker --threshold 80 --reporter=html",
+        "start": "node server.js",
+        "dev": "npm run infisical:generate && nodemon",
+        "infisical:generate": "echo 'Generating .env from Infisical...' infisical pull --env=dev --path=.env --force",
+        "prisma:generate": "npm run infisical:generate && npx prisma generate",
+        "prisma:migrate": "npm run infisical:generate && npx prisma migrate dev --name init",
+        "prisma:push": "npm run infisical:generate && npx prisma db push",
+        "seed": "npm run infisical:generate && ts-node src/seeding/index.ts",
+        "prepare": "husky install"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Devroots-Site/BeDevroots.git"
+    },
+    "author": "Bichler Bastian",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Devroots-Site/BeDevroots/issues"
+    },
+    "homepage": "https://github.com/Devroots-Site/BeDevroots#readme",
+    "devDependencies": {
+        "@eslint/js": "9.26.0",
+        "@eslint/json": "0.12.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/cors": "2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/morgan": "1.9.9",
+        "@types/node": "22.15.3",
+        "@types/supertest": "^6.0.3",
+        "@types/swagger-ui-express": "4.1.8",
+        "@typescript-eslint/eslint-plugin": "8.31.1",
+        "@typescript-eslint/parser": "8.31.1",
+        "eslint": "9.26.0",
+        "eslint-config-prettier": "10.1.2",
+        "eslint-plugin-import": "2.31.0",
+        "eslint-plugin-prettier": "5.2.6",
+        "globals": "16.0.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.5.1",
+        "morgan": "1.10.0",
+        "nodemon": "3.1.10",
+        "prettier": "3.5.3",
+        "prisma": "6.7.0",
+        "supertest": "^7.1.0",
+        "ts-node": "10.9.2",
+        "ts-node-dev": "2.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "tsx": "4.19.4",
+        "typescript": "5.8.3",
+        "typescript-eslint": "8.31.1",
+        "vitest": "^3.1.2"
+    },
+    "dependencies": {
+        "@prisma/client": "6.7.0",
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "2.8.5",
+        "dotenv": "16.5.0",
+        "express": "5.1.0",
+        "husky-init": "^8.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "openapi-types": "^12.1.3",
+        "openapi3-ts": "^4.4.0",
+        "swagger-ui-express": "5.0.1"
+    }
 }
