--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
       - "3001:3001"
     restart: unless-stopped
     environment:
-      NODE_ENV: production
-      DATABASE_URL: postgres://admin:geheim@db-host:5432/devroots
+      - NODE_ENV=production
+      - DATABASE_URL=${DATABASE_URL}
+
