--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,4 @@ services:
       - "3001:3001"
     restart: unless-stopped
     environment:
-      - NODE_ENV=production
-      - DATABASE_URL=${DATABASE_URL}
-
+      NODE_ENV: production
