--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "_moduleAliases": {
+        "@": "dist/src"
+    },
     "scripts": {
         "build": "tsc",
         "lint": "eslint . --ext .ts",
@@ -77,6 +80,7 @@
         "express": "5.1.0",
         "husky-init": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
+        "module-alias": "^2.2.3",
         "openapi-types": "^12.1.3",
         "openapi3-ts": "^4.4.0",
         "swagger-ui-express": "5.0.1"
